@@ -1,3 +1,7 @@
+[B]v0.0.8[/B]
+Next-Page system fixed with thanks to Shani.
+Temp method with Debug usage to allow for streamkey / youtubeId catching.
+
 [B]v0.0.7[/B]
 Local Lists.
 Some misc. testing and code mods.
